--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ font-awesome.min.css" rel="stylesheet">
     <body>
         <section class="header">
             <nav>
-                <a href="index.html"><img src="images/logo1.png"></a>
+                <a href="index.html"><img src="./images/logo1.png"></a>
                 <div class="nav-links" id="navLinks">
                 <i class="fa fa-solid fa-times" onclick="hideMenu()"></i>
                     <ul>
