--- a/Questions.html
+++ b/Questions.html
@@ -14,7 +14,7 @@ font-awesome.min.css" rel="stylesheet">
     <body>
         <section class="bro-header">
             <nav>
-                <a href="index.html"><img src="images/logo1.png"></a>
+                <a href="index.html"><img src="Images/logo1.png"></a>
                 <div class="nav-links" id="navLinks">
                 <i class="fa fa-solid fa-times" onclick="hideMenu()"></i>
                     <ul>
@@ -267,7 +267,7 @@ font-awesome.min.css" rel="stylesheet">
 
                                                    
                     </div>
-                    <div class="meme"><img src="images/meme.png" class="meme" onclick="audio.play()">
+                    <div class="meme"><img src="Images/meme.png" class="meme" onclick="audio.play()">
                       <script>
                           const audio = new Audio()
                           audio.src = "Audio/Docta.mp3"
