--- a/Others.html
+++ b/Others.html
@@ -14,16 +14,16 @@ font-awesome.min.css" rel="stylesheet">
     <body>
         <section class="sub-header">
             <nav>
-                <a href="index.html"><img src="images/logo1.png"></a>
+                <a href="index.html"><img src="Images/logo1.png"></a>
                 <div class="nav-links" id="navLinks">
                 <i class="fa fa-solid fa-times" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="About.html">ABOUT</a></li>
                         <li><a href="Courses.html">Class 11 notes</a></li>
-                        <li><a href="">EXTRA QUESTIONS</a></li>
-                        <li><a href="">BLOG</a></li>
-                        <li><a href="">CONTACT</a></li>
+                        <li><a href="Questions.html">EXTRA QUESTIONS</a></li>
+                        <li><a href="Others.html">BLOG</a></li>
+                        <li><a href="Others.html">CONTACT</a></li>
                     </ul>
                 </div>
                 <i class="fa fa-bars" onclick="showMenu()"></i>
