--- a/Courses.html
+++ b/Courses.html
@@ -14,7 +14,7 @@ font-awesome.min.css" rel="stylesheet">
     <body>
         <section class="bro-header">
             <nav>
-                <a href="index.html"><img src="images/logo1.PNG"></a>
+                <a href="index.html"><img src="Images/logo1.PNG"></a>
                 <div class="nav-links" id="navLinks">
                 <i class="fa fa-solid fa-times" onclick="hideMenu()"></i>
                     <ul>
@@ -22,8 +22,8 @@ font-awesome.min.css" rel="stylesheet">
                         <li><a href="About.html">ABOUT</a></li>
                         <li><a href="Courses.html">Class 11 notes</a></li>
                         <li><a href="Questions.html">EXTRA QUESTIONS</a></li>
-                        <li><a href="">BLOG</a></li>
-                        <li><a href="">CONTACT</a></li>
+                        <li><a href="Others.html">BLOG</a></li>
+                        <li><a href="Others.html">CONTACT</a></li>
                     </ul>
                 </div>
                 <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -1831,7 +1831,7 @@ font-awesome.min.css" rel="stylesheet">
 
                                                    
                     </div>
-                    <div class="meme"><img src="images/meme.png" class="meme" onclick="audio.play()">
+                    <div class="meme"><img src="Images/meme.png" class="meme" onclick="audio.play()">
                         <script>
                             const audio = new Audio()
                             audio.src = "Audio/Docta.mp3"
