--- a/Others.html
+++ b/Others.html
@@ -44,7 +44,7 @@ font-awesome.min.css" rel="stylesheet">
 
 
 <section class="footer">
-    <h4> About </h4>
+    <h4> Being made </h4>
     <p>This website is totally for educational purposes, because nothing screams 
         "high-quality learning" like this perfectly polished masterpiece of pure, 
         solemn knowledge. Absolutely no distractions or ulterior motives here whatsoever.</p>
