--- a/Questions.html
+++ b/Questions.html
@@ -18,7 +18,7 @@ font-awesome.min.css" rel="stylesheet">
                 <div class="nav-links" id="navLinks">
                 <i class="fa fa-solid fa-times" onclick="hideMenu()"></i>
                     <ul>
-                        <li><a href="Index.html">HOME</a></li>
+                        <li><a href="index.html">HOME</a></li>
                         <li><a href="About.html">ABOUT</a></li>
                         <li><a href="Courses.html">Class 11 notes</a></li>
                         <li><a href="Questions.html">EXTRA QUESTIONS</a></li>
