--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ font-awesome.min.css" rel="stylesheet">
 
 <section class="course">
     <h1>Notes of class 11</h1>
-    <p>AILE LAI KEI CHAINA PACHI AAUNU</p>
+    <p>The website includes following things regarding the syllabus of class 11</p>
     <div class="row">
         <div class="course-col">
           <h3>Computer system</h3> 
