--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ font-awesome.min.css" rel="stylesheet">
                 <i class="fa fa-bars" onclick="showMenu()"></i>
             </nav>
             <div class="text-box">
-                <h1> Welcome soldier</h1>
+                <h1> Welcome to the fortress</h1>
                 <p>In this website, you will be doing STUDY. 
                     That's all, now START</p>
                     <a href="#" class="hero-btn" onclick="playRandomAudio()">Be better than your Cousin</a>                
